--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Owner 2/tools/sqljdbc_9.2/kor/mssql-jdbc-9.2.1.jre15.jar">
+	<classpathentry kind="lib" path="C:/Users/Owner 2/tools/mariadb-java-client-2.7.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
