--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Owner 2/Desktop/gson-2.8.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
